...
            Form {
                List {
                    Section("Pilot") {
                        LabeledContent {
                            TextField("Pilot: ", text: $vm.pilotName)
                        } label: {
                          Text("Pilot:")
                        }
                        LabeledContent {
                            TextField("Glider: ", text: $vm.gliderName)
                        } label: {
                            Text("Glider: ")
                        }
...
                    
                    Section("System") {
                        Toggle("Audio:", isOn: $vm.audioActive)
                        VStack(alignment: .leading) {
                            Text("Vario Audio: \(String(format: "%.0f", vm.varioVolume)) %")
                            Slider(value: $vm.varioVolume, in:0...100, step: 10)
                                .accessibilityLabel("volume")
                        }
                    }
                    
                    Section("Status") {
                        Text("GPS Available: \(vm.gpsAvailable ? "True" : "False")")
                        Text("Alt Available: \(vm.gpsAvailable ? "True" : "False")")
...
