...
        
    var body: some View {
        
        List {
            Section(header: Text("Profile")) {
                NavigationLink(value: path) {
                    Text("View Playback")
                }
            }
            
            Section(header: Text("Details")) {
                TextField("", text: $flightName)
                    .font(.title)
...
            }
        }
        .onAppear {
            Task(priority: .high) {
                self.fileToExport = await self.vm.exportIgcFile(flight: flight) ?? IgcFile(initialText: "")
            }
            flightName = flight.title ?? "Unknown Flight"
            
            if var frames = flight.frames?.allObjects as? [FlightFrame] {
                frames.sort(by: { $0.timestamp! < $1.timestamp! })
                
                launchAlt = frames.min(by: {
                    a, b in a.timestamp! < b.timestamp!
...
