...
                    }
                }
                .font(.title)
                .padding(.vertical, 10)
                .tint(vm.flightComputer.inFlight ? .red : .green)
                .buttonStyle(.borderedProminent)
                .accessibilityIdentifier("FlightStateButton")
                
                ScrollView {
                    VStack {
                        Divider()
                        
                        HStack {
...
